--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "soca14",
-  "version": "0.0.0",
+  "main": "main.js",
+  "version": "0.0.1",
+  "authors": "sc",
+  "description": "scapp",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:soca14": "node dist/soca14/server/server.mjs"
+    "serve:ssr:soca14": "node dist/soca14/server/server.mjs",
+    "electron": "ng build --base-href ./ && electron .",
+	  "dist": "ng build --base-href ./ && electron-builder"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +38,8 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "electron": "^28.2.2",
+    "electron-builder": "^24.9.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -40,5 +47,13 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.3.2"
+  },
+  "build": {
+    "appId": "software.cantrips",
+    "productName": "SoftwareCantrips",
+    "mac": {
+      "category": "public.app-category.developer-tools"
+    },
+    "files": ["**/*", "dist/soca14/browser/**"]
   }
 }
